--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 # Учим git игнорировать эти папки, чтобы
 # они не попадали в репозиторий, потому что засоряют репозиторий. 
-node_modules
-dist
+node_modules/
+dist/
